--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -62,8 +62,8 @@ body{
 }
 
 .bg-transparent{
-  background: rgba(255, 255, 255, 0.8);
-  background: linear-gradient(180deg, #ffffffb4 0%, #ffffffb4 100%);
+  background: rgba(0, 0, 0, 0.075);
+  background: linear-gradient(180deg, #2a2a2a0a 0%, #2a2a2a28 100%);
 }
 
 .icon-size{
